k8s/goonplanet/istio/ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ingress
  namespace: goonplanet
spec:
  hosts: 
  - 'api.goonplanet.co.kr'
  gateways:
  - gateway
  http:
  - route:
    - destination: 
        host: goon-api
